pkg/k8s/kustomize/subnet-services/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: subnet-services-default-deny-ingress
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: subnet-services-allow-subnet-services
spec:
  podSelector:
    matchLabels: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              subnet.node/name: subnet-services
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: subnet-services-allow-ingress-nginx
spec:
  podSelector:
    matchLabels: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
